Update gradle settings